--- a/estiloMaster.css
+++ b/estiloMaster.css
@@ -2,6 +2,7 @@ body{
     margin:0;
     padding:0;
     border: 0;
+    font-family: 'lato', sans-serif;
 }
 
 .head{
@@ -52,17 +53,23 @@ header .cajaBotones img{
 
 .piso3 h1{
     color: #6BB7D1;
-    margin-left: 45%;
+    font-size: 100px;
+    margin-left: 40%;
+    line-height: 0px;
 }
 
 .piso3 h2{
     color: #FF85A8;
-    margin-left: 37%;
+    font-size: 40px;
+    margin-left: 30%;
+    border: 0px;
+    line-height: 0px;
 }
 
 .piso3 p{
     text-align: center;
     margin-left: 25%;
+    font-size: 25px;
     margin-right: 25%;
 }
 
@@ -71,7 +78,103 @@ header .cajaBotones img{
     width: 250px;
 }
 
-.piso3 .ilustracion_1{
+.piso3 .boton{
+    margin-left: 40%;
+    width: 300px;
+}
+
+.piso2 .head{
+    margin-left: 10%;
+    margin-right: 10%;
+    padding-top: 10px;
+    padding-bottom: 5px;
+    line-height: 0px;
+}
+
+.piso2 .head h1{
+    margin-left: 25%;
+    margin-right: 25%;
+    text-align: center;
+    color: white;
+    font-size: 100px;
+}
+
+.piso2 .head h2{
+    text-align: center;
+    color: white;
+    font-size: 40px;
+}
+
+.piso2 p{
+    text-align: center;
+    margin-left: 22%;
+    font-size: 25px;
+    margin-right: 22%;
+}
+
+.piso1 .head{
+    margin-left: 10%;
+    margin-right: 10%;
+    padding-top: 10px;
+    padding-bottom: 5px;
+    line-height: 0px;
+}
+
+.piso1 .head h1{
+    margin-left: 25%;
+    margin-right: 25%;
+    text-align: center;
+    color: white;
+    font-size: 100px;
+}
+
+.piso1 .head h2{
+    text-align: center;
+    color: white;
+    font-size: 40px;
+}
+
+.piso1 p{
+    text-align: center;
+    margin-left: 22%;
+    font-size: 25px;
+    margin-right: 22%;
+}
+
+.piso1 .textoFinal{
+    text-align: center;
+    margin-left: 34%;
+    font-size: 25px;
+    margin-right: 34%;
+}
+
+.piso1 .conclusion{
+    color: #FF85A8;
+    text-align: center;
+    margin-left: 34%;
+    font-size: 25px;
+    margin-right: 34%;
+}
+
+.piso1 .boton{
+    margin-left: 40%;
+    width: 300px;
+}
+
+.ilustracion{
     width: 900px;
     margin-left: 20%;
+}
+
+footer{
+    background-color: #61cc66;
+    line-height: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 70px;
+}
+
+footer p{
+    color: white;
+    font-size: 20px;
 }
